fix(card): keeps the cut off position relative

--- a/assets/scss/components/_card.scss
+++ b/assets/scss/components/_card.scss
@@ -27,6 +27,30 @@
     }
   }
 
+  &.card--products {
+    .card__img-top {
+      &::before {
+        display: none;
+      }
+
+      .card__img-headline {
+        padding: spacing(4) spacing(5) spacing(6);
+      }
+
+      .card__img-headline__container {
+        height: 100%;
+        position: relative;
+        top: 0%;
+
+        .headline {
+          @include font-style($style: 'font-size-4', $line: 'wide');
+
+          min-height: 70%;
+        }
+      }
+    }
+  }
+
   article {
     margin: 0;
   }
@@ -36,7 +60,7 @@
     display: none;
   }
 
-  .card-img-top {
+  .card__img-top {
     @include aspect-ratio(16, 9);
 
     &:not(.card-img--long) {
@@ -50,43 +74,6 @@
     .card-img--long {
       object-fit: cover;
     }
-
-    &.card-img--products {
-      @include aspect-ratio(16, 6);
-
-      .card-img-headline__container {
-        height: 100%;
-        position: absolute;
-        top: 0%;
-
-        .headline {
-          min-height: 70%;
-          padding: 0 spacing(5);
-
-          @include font-style($style: 'font-size-4', $line: 'wide');
-        }
-
-        .card-img-tag {
-          display: inline-block;
-          position: absolute;
-          right: 13%;
-          padding: spacing(0.1) spacing(1);
-          text-transform: uppercase;
-          @include font-style($style: 'font-size-3', $weight: 'bold', $line: 'wide');
-        }
-
-        .card-img-cutoff {
-          height: 30%;
-          background: linear-gradient(
-            4deg,
-            var(--color-card-background) 0%,
-            var(--color-card-background) 55%,
-            rgba(255, 0, 0, 0) 56%,
-            rgba(255, 0, 0, 0) 100%
-          );
-        }
-      }
-    }
   }
 
   .card-img {
@@ -94,6 +81,28 @@
     border-bottom-left-radius: 0;
     border-top-left-radius: 0;
     border-top-right-radius: 0;
+  }
+
+  .card__img-tag {
+    @include font-style($style: 'font-size-3', $weight: 'bold');
+
+    display: inline-block;
+    position: absolute;
+    right: 13%;
+    line-height: 1em !important; // TODO there is an issue with font-style when this issue is fixed important can go away
+    padding: spacing(2) spacing(3);
+    text-transform: uppercase;
+  }
+
+  .card-img-cutoff {
+    height: spacing(12);
+    background: linear-gradient(
+      4deg,
+      var(--color-card-background) 0%,
+      var(--color-card-background) 55%,
+      rgba(255, 0, 0, 0) 56%,
+      rgba(255, 0, 0, 0) 100%
+    );
   }
 
   .card-footer {
